# patty

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cli/: main.cpp
cmake/: pattyConfig.cmake.in
include/patty/: patty.h  version.h.in
include/patty/core/: match.h  pattern.h  scanner.h
include/patty/memory/: buffer.h  file.h  process.h  provider.h
include/patty/region/: filter.h  region.h
include/patty/resolve/: pointer_chain.h  rip_relative.h  validator.h
mcp/: server.py
src/core/: pattern.cpp  scanner.cpp
src/memory/: file.cpp  process_win.cpp
targets/: example.json
tests/: cli_smoke.py  mcp_smoke.py  test_pattern.cpp  test_providers.cpp  test_scanner.cpp
